analogue Change Log

Version 0.13-0 Development branch opened 16 December 2013

	* predict.pcr: internal function was calling `fitPCR()` via
	`analogue:::fitPCR()`, which is not required nor was it intended.
	Reported by Brian Ripley.

Version 0.12-0

	* Released to CRAN December 13th 2013

Version 0.11-99

	* Preparing for the 0.12-0 release.

	* NEWS: analogue now has an `inst/NEWS.Rd` file highlight the major
	changes in the upcoming 0.12-0 release.

Version 0.11-6

	* distance3: removed - redundant attempt to improve `distance()`.

	* distance: `newDistance()` -> `distance()`
	            `distance()`    -> `oldDistance()`

	This implements the change suggested in 0.11-5. `distance()` is
	now using the compiled C versions of the dissimilarity code.

	* oldDistance: (was `distance()`) fixed a bug in the x-only case
	where `method = "kendall"`.

	* Vignette: Updated some details regarding C versions of
	dissimilarity coefs.

	* performance: a tweak to the print method to zap values that
	are effectively 0. Only affects vectors of performance statistics
	not data frames of stats.

	* predict.pcr: Apply transformation function and perform
	predictions for LOO, n k-fold, and bootstrap predictions

	* crossval.pcr: leave-one-out CV was incorrectly averaging over
	components. Now does bootstrap and n k-fold CV.

Version 0.11-5

	* newDistance: (yet another) new distance() replacement to
	interface with fast C versions of the dissimilarity code. This
	one *will* replace `distance()` in version 0.12-0, where upon it
	will be renamed to `distance()` and the current `distance()` will
	be renamed to `oldDistance()`.

	* Unit tests: started adding unit tests using the **testthat**
	package. Hence **analogue** now `Suggests: testthat`.

Version 0.11-4

	* logitreg: fitting is now possible using Firth's bias reduction
	technique via the brglm package.

	Changes to the labels in the output of the `summary` method.
