@@ -185,6 +185,7 @@ S3method(fitted, wa)
 S3method(predict, logitreg)
 S3method(predict, mat)
 S3method(predict, pcr)
+S3method(predict, prcurve)
 S3method(predict, wa)
 S3method(residuals, bootstrap.mat)
 S3method(residuals, mat)
